crates/cargo-tsuno/tests/fixtures/verify_cli/fail/rejects_inv_not_at_loop_start.rs
#[tsuno::verify]
fn bad_loop(mut x: i32) {
    while x < 3 {
        x = x + 1;
        tsuno::inv!("x <= 3");
        break;
    }
}

fn main() {}
